2.3.22 (2017-XX-XX)
-------------------

New features
 - [eas] initial EAS v16 and email drafts support

2.3.21 (2017-06-01)
-------------------

Enhancements
 - [core] improved event invitation for all day events (#4145)
 - [core] now possible to {un}subscribe to folders using sogo-tool
 - [eas] added photo support for GAL search operations
 - [web] added custom fields support from Thunderbird's address book
 - [web] updated CKEditor to version 4.7.0
 - [web] added Latvian (lv) translation - thanks to Juris Balandis

Bug fixes
 - [core] fixed calendar component move across collections (#4116)
 - [core] handle properly mails using windows-1255 charset (#4124)
 - [core] properly honor the "include in freebusy" setting (#3354)
 - [core] make sure to use crypt scheme when encoding md5/sha256/sha512 (#4137)
 - [core] newly subscribed calendars are excluded from freebusy (#3354)
 - [core] strip cr during LDIF import process (#4172)
 - [web] fixed mail delegation of pristine user accounts (#4160)
 - [web] respect SOGoLanguage and SOGoSupportedLanguages (#4169)
 - [eas] fixed opacity in EAS freebusy (#4033)
 - [eas] set reply/forwarded flags when ReplaceMime is set (#4133)
 - [eas] remove alarms over EAS if we don't want them (#4059)
 - [eas] correctly set RSVP on event invitations
 - [eas] avoid sending IMIP request/update messages for all EAS clients (#4022)

2.3.20 (2017-03-10)
-------------------

New features
 - [core] new sogo-tool checkup command to make sure user's data is sane 
 - [core] new sogo-tool manage-acl command to manage calendar/address book ACLs
 - [web] use "date" extension of Sieve to enable/disable vacation auto-reply (#1530, #1949)

Enhancements
 - [web] added Hebrew (he) translation - thanks to Raz Aidlitz
 - [web] updated CKEditor to version 4.6.2

Bug fixes
 - [core] remove all alarms before sending IMIP replies (#3925)
 - [core] fixed handling of exdates and proper intersection for fbinfo (#4051)